--- a/PAM/Views/EditTransfer/UnitTransfer.cshtml
+++ b/PAM/Views/EditTransfer/UnitTransfer.cshtml
@@ -1,8 +1,7 @@
 ﻿@model Request
 @{
-     ViewData["Title"] = "Unit Selection";
-     ViewData["id"] = Model.RequestId;
-     var temp = (List<SystemAccess>)ViewData["SystemAccess"];
+  ViewData["Title"] = "Unit Selection Transfer";
+  ViewData["id"] = Model.RequestId;
 }
 @section StyleSheets{
   <link rel="stylesheet" href="~/css/progressbar.css" />
@@ -11,25 +10,52 @@
   <script src="~/lib/bootstrap-treeview/bootstrap-treeview.min.js"></script>
   <script>
   $(function(){
-    var defaultSystems = @Model.RequestedFor.UnitId;
-        $("#unitId").val(defaultSystems);
+    var page ='@ViewData["Title"]';
+    $("li[data-title='" + page + "']").addClass("active");
+    $("#transferTree").treeview({
+      data: @Html.Raw(@ViewData["tree"]),
+      levels: 1,
+      expandIcon: "fa fa-caret-down",
+      collapseIcon: "fa fa-caret-up",
+      onNodeSelected: function (event, node) {
+        if (node.type == "Bureau") {
+          $("#transferUnitId").val("");
+          $("#systems").empty();
+          $("#next").prop("disabled", true);
+          $("#saveDraft").prop("disabled", true);
+          return;
+        }
+        $("#transferUnitId").val(node.id);
         $("#next").prop("disabled", false);
         $("#saveDraft").prop("disabled", false);
         $.ajax({
-          url: "/api/portfolio/" + defaultSystems,
+          url: "/api/portfolio/" + node.id,
           success: function (data) {
             $("#systems").empty();
             data.forEach(function (system) {
-              if (system.systemId) {
-                $("#system" + system.systemId).prop("checked", true);
-                $("#system" + system.systemId).prop("disabled", true);
-              }
-              $("#systems").append("<tr><td>"
-                + system.systemId + "</td><td>"
-                + system.name + "</td></tr>");
+              $("#systems").append("<tr><td>" + system.systemId + "</td><td>"
+                + system.name + "</td><td>"
+                + (system.description ? system.description : '') + "</td></tr>");
             });
           }
-    })
+        })
+      }
+    });
+    if ($("#transferUnitId").val()) {
+      var nodeId = 1;
+      var node = $("#transferTree").treeview("getNode", nodeId);
+      while (node) {
+        if (node.type == 'Unit' && node.id == $("#transferUnitId").val()) break;
+        node = $("#transferTree").treeview("getNode", ++nodeId);
+      }
+      if (node) {
+        console.log(node);
+        $("#transferTree").treeview("selectNode", node);
+        $('#transferTree').treeview('revealNode', [nodeId, { silent: true }]);
+        $("#next").prop("disabled", false);
+        $("#saveDraft").prop("disabled", false);
+      }
+    }
     $("#saveDraft").click(function () {
       var form = $(this).parents("form:first");
       form.append("<input type='hidden' name='saveDraft' value='true'>");
@@ -49,52 +75,33 @@
 <partial name="../Shared/_ProgressBar1.cshtml" />
 
 <form asp-action="SelectUnit" method="post">
-  <div class="row">
-    <p>Please select your unit/job function to transfer from:</p>
-    <div class="col-12 col-md-6 mb-3">
-      <div class="card-body">
-        <div class="row">
-          <div class="form-group col-md-6">
-            <label>Bureau</label>
-            <span class="form-control">@Model.RequestedFor.Bureau.Description</span>
-          </div>
-          <div class="form-group col-md-6">
-            <label>Unit / Job Function</label>
-            <span class="form-control">@Model.RequestedFor.Unit.Name</span>
-          </div>
-        </div>
-        <div class="row">
-          <table class="table">
-            <thead>
-              <tr>
-                <th scope="col">Id</th>
-                <th scope="col">Name</th>
-                <th scope="col" class="nowrap">In Portfolio</th>
-              </tr>
-            </thead>
-            <tbody>
-              @foreach (var sa in temp)
-              {
-                <tr>
-                  <td>@sa.System.SystemId</td>
-                  <td>@sa.System.Name</td>
-                  <td>@sa.InPortfolio</td>
-                </tr>
-              }
-            </tbody>
-          </table>
-        </div>
-      </div>
-    </div>
+  <p>Please select the unit/job you wish to <strong>transfer</strong> to:</p>
+<div class="row">
+  <div class="col-12 col-md-6 mb-3">
+    <div id="transferTree"></div>
   </div>
-  <div class="form-row">
-    <div class="col-4">
-      <button id="saveDraft" class="btn btn-secondary" disabled>Save Draft</button>
-    </div>
-    <div class="col-8 text-right">
-      <a asp-action="RequesterInfo" asp-route-id="@Model.RequestId" class="btn btn-secondary">Previous</a>
-      <button id="next" type="submit" class="btn btn-primary ml-3" disabled>Next</button>
-    </div>
+  <div class="col-12 col-md-6 mb-3">
+    <p>System Portfolio</p>
+    <table class="table sticky-top">
+      <thead>
+        <tr>
+          <th scope="col">Id</th>
+          <th scope="col">Name</th>
+          <th scope="col">Description</th>
+        </tr>
+      </thead>
+      <tbody id="systems"></tbody>
+    </table>
   </div>
-  <input id="unitId" name="unitId" type="hidden" value="@Model.RequestedFor.UnitId" />
+</div>
+<div class="form-row">
+  <div class="col-4">
+    <button id="saveDraft" class="btn btn-secondary" disabled>Save Draft</button>
+  </div>
+  <div class="col-8 text-right">
+    <a asp-action="RequesterInfo" asp-route-id="@Model.RequestId" class="btn btn-secondary">Previous</a>
+    <button id="next" type="submit" class="btn btn-primary ml-3" disabled>Next</button>
+  </div>
+</div>
+  <input id="transferUnitId" name="transferUnitId" type="hidden" value="@Model.RequestedFor.UnitId" />
 </form>
