--- a/PAM/Views/Review/ViewReview.cshtml
+++ b/PAM/Views/Review/ViewReview.cshtml
@@ -34,83 +34,7 @@
   </div>
 </div>
 
-<div class="card">
-  <div class="card-header">
-    Requester Information
-  </div>
-  <div class="card-body">
-    <div class="row">
-      <div class="form-group col-md-6">
-        <label>First Name</label>
-        <span class="form-control">@request.RequestedFor.FirstName</span>
-      </div>
-      <div class="form-group col-md-6">
-        <label>Last Name</label>
-        <span class="form-control">@request.RequestedFor.LastName</span>
-      </div>
-    </div>
-    <div class="row">
-      <div class="form-group col-md-6">
-        <label>Department</label>
-        <span class="form-control">@request.RequestedFor.Department</span>
-      </div>
-      <div class="form-group col-md-6">
-        <label>Service</label>
-        <span class="form-control">@request.RequestedFor.Service</span>
-      </div>
-    </div>
-    <div class="row">
-      <div class="form-group col-md-6">
-        <label>Title</label>
-        <span class="form-control">@request.RequestedFor.Title</span>
-      </div>
-      <div class="form-group col-md-6">
-        <label>Email</label>
-        <span class="form-control">@request.RequestedFor.Email</span>
-      </div>
-    </div>
-    <div class="row">
-      <div class="form-group col-md-6">
-        <label>Department</label>
-        <span class="form-control">@request.RequestedFor.Department</span>
-      </div>
-      <div class="form-group col-md-6">
-        <label>Service</label>
-        <span class="form-control">@request.RequestedFor.Service</span>
-      </div>
-    </div>
-    <div class="row">
-      <div class="form-group col-md-6">
-        <label>Address</label>
-        <span class="form-control">@request.RequestedFor.Address</span>
-      </div>
-      <div class="form-group col-md-6">
-        <label>City</label>
-        <span class="form-control">@request.RequestedFor.City</span>
-      </div>
-    </div>
-    <div class="row">
-      <div class="form-group col-md-6">
-        <label>State</label>
-        <span class="form-control">@request.RequestedFor.State</span>
-      </div>
-      <div class="form-group col-md-6">
-        <label>Zip Code</label>
-        <span class="form-control">@request.RequestedFor.Zip</span>
-      </div>
-    </div>
-    <div class="row">
-      <div class="form-group col-md-6">
-        <label>Phone</label>
-        <span class="form-control">@request.RequestedFor.Phone</span>
-      </div>
-      <div class="form-group col-md-6">
-        <label>Cell Phone</label>
-        <span class="form-control">@request.RequestedFor.CellPhone</span>
-      </div>
-    </div>
-  </div>
-</div>
+<partial name="../Review/_RequesterInfoReview" />"
 
 <div class="card">
   <div class="card-header">
