--- a/PAM/Views/Shared/AdditionalInfo.cshtml
+++ b/PAM/Views/Shared/AdditionalInfo.cshtml
@@ -57,13 +57,20 @@
       <button id="saveDraft" class="btn btn-secondary">Save Draft</button>
     </div>
     <div class="col-8 text-right">
-      @if(Model.RequestTypeId == 4){
-      <a asp-action="UnitSelection" asp-route-id="@ViewData["id"]" class="btn btn-secondary">Previous</a>
-      <button id="next" type="submit" class="btn btn-primary ml-3">Next</button>
+      @if (Model.RequestTypeId == 3)
+      {
+        <a asp-controller="CreateRequest" asp-action="RequesterInfo" asp-route-id="@ViewData["id"]" class="btn btn-secondary">Previous</a>
+        <button id="next" type="submit" class="btn btn-primary ml-3">Next</button>
       }
-      @if(Model.RequestTypeId == 11){
-      <a asp-action="AddSystems" asp-route-id="@ViewData["id"]" class="btn btn-secondary">Previous</a>
-      <button id="next" type="submit" class="btn btn-primary ml-3">Next</button>
+      @if (Model.RequestTypeId == 4)
+      {
+        <a asp-action="UnitSelection" asp-route-id="@ViewData["id"]" class="btn btn-secondary">Previous</a>
+        <button id="next" type="submit" class="btn btn-primary ml-3">Next</button>
+      }
+      @if (Model.RequestTypeId == 11)
+      {
+        <a asp-action="AddSystems" asp-route-id="@ViewData["id"]" class="btn btn-secondary">Previous</a>
+        <button id="next" type="submit" class="btn btn-primary ml-3">Next</button>
       }
     </div>
   </div>
