slightly functional system tracking

--- a/PAM/Views/EditTransfer/Summary.cshtml
+++ b/PAM/Views/EditTransfer/Summary.cshtml
@@ -25,12 +25,34 @@
   <div class="card-body">
     <div class="row">
       <div class="form-group col-md-6">
-        <label>Bureau</label>
-        <span class="form-control">@Model.RequestedFor.Bureau.Description</span>
+        <div class="row">
+          <div class="col-md-12">
+            <label>Bureau</label>
+            <span class="form-control">@Model.RequestedFor.Bureau.Description</span>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <label>Unit / Job Function</label>
+            <span class="form-control">@Model.RequestedFor.Unit.Name</span>
+          </div>
+        </div>
       </div>
       <div class="form-group col-md-6">
-        <label>Unit / Job Function</label>
-        <span class="form-control">@Model.RequestedFor.Unit.Name</span>
+        <div class="row">
+          <div class="col-md-12">
+            <label>Bureau</label>
+            <span class="form-control">@Model.RequestedFor.Bureau.Description</span>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <label>Unit / Job Function</label>
+            <span class="form-control">@Model.RequestedFor.Unit.Name</span>
+          </div>
+        </div>
+        <div class="form-group col-md-6">
+        </div>
       </div>
     </div>
     <div class="row">
