--- a/PAM/Views/EditTransfer/UnitTransfer.cshtml
+++ b/PAM/Views/EditTransfer/UnitTransfer.cshtml
@@ -74,7 +74,7 @@
 
 <partial name="../Shared/_ProgressBar1.cshtml" />
 
-<form asp-action="SelectUnit" method="post">
+<form asp-controller="EditTransfer" asp-action="UnitTransfer" method="post">
   <p>Please select the unit/job you wish to <strong>transfer</strong> to:</p>
 <div class="row">
   <div class="col-12 col-md-6 mb-3">
