--- a/PAM/Views/EditTransfer/UnitSelection.cshtml
+++ b/PAM/Views/EditTransfer/UnitSelection.cshtml
@@ -74,7 +74,7 @@
 
 <partial name="../Shared/_ProgressBar1.cshtml" />
 
-<form asp-action="SelectUnit" method="post">
+<form asp-controller="EditTransfer" asp-action="UnitSelection" method="post">
     <p>Please select <strong>your</strong> unit/job function:</p>
   <partial name="../Shared/_UnitSystemPortfolio.cshtml" />
   <input id="unitId" name="unitId" type="hidden" value="@Model.RequestedFor.UnitId" />
