Fixed routing for going back to RequesterInfo on _summary

--- a/PAM/Views/Shared/_Summary.cshtml
+++ b/PAM/Views/Shared/_Summary.cshtml
@@ -44,7 +44,7 @@
 <div class="card">
   <div class="card-header">
     Requester Information
-    <a class="float-right" asp-action="RequesterInfo" asp-route-id="@ViewData["id"]"><i class="fas fa-edit"></i></a>
+    <a class="float-right" asp-controller="Request" asp-action="RequesterInfo" asp-route-id="@ViewData["id"]"><i class="fas fa-edit"></i></a>
   </div>
   <div class="card-body">
     <div class="row">
