--- a/PAM/Views/Shared/_Summary.cshtml
+++ b/PAM/Views/Shared/_Summary.cshtml
@@ -16,7 +16,7 @@
   </div>
 </div>
 
-<div class="card">
+<div class="card border-primary mb-1">
   <div class="card-header">Request Information</div>
   <div class="card-body">
     <div class="row">
@@ -41,7 +41,7 @@
   </div>
 </div>
 
-<div class="card">
+<div class="card border-primary mb-1">
   <div class="card-header">
     Requester Information
     <a class="float-right" asp-action="RequesterInfo" asp-route-id="@ViewData["id"]"><i class="fas fa-edit"></i></a>
