can view submitted transfer

--- a/PAM/Views/EditTransfer/Summary.cshtml
+++ b/PAM/Views/EditTransfer/Summary.cshtml
@@ -17,8 +17,8 @@
 
 <partial name="../Shared/_Summary.cshtml" />
 
-<div class="card border-primary mb-1">
-  <div class="card-header">
+<div class="card border-info mb-1">
+  <div class="card-header bg-info text-white">
     Systems Requested
     <a class="float-right" asp-controller="EditTransfer" asp-action="UnitSelection" asp-route-id="@ViewData["id"]"><i class="fas fa-edit"></i></a>
   </div>
@@ -183,8 +183,8 @@
   </div>
   </div>
 
-<div class="card border-primary mb-1">
-  <div class="card-header">
+<div class="card border-info mb-1">
+  <div class="card-header bg-info text-white">
     Additional Information
     <a class="float-right" asp-action="AdditionalInfo" asp-route-id="@ViewData["id"]"><i class="fas fa-edit"></i></a>
   </div>
@@ -241,8 +241,8 @@
   </div>
 </div>
 
-<div class="card border-primary mb-1">
-  <div class="card-header">
+<div class="card border-info mb-1">
+  <div class="card-header bg-info text-white">
     Signature(s) Required
     <a class="float-right" asp-action="Signatures" asp-route-id="@ViewData["id"]"><i class="fas fa-edit"></i></a>
   </div>
