--- a/PAM/Views/Request/ViewRequest.cshtml
+++ b/PAM/Views/Request/ViewRequest.cshtml
@@ -11,8 +11,8 @@
     <a asp-controller="Request" asp-action="MyRequests" class="btn btn-primary float-right">Return</a>
   </div>
 </div>
-<div class="card">
-  <div class="card-header">Request Information</div>
+<div class="card border-info mb-1">
+  <div class="card-header bg-info text-white">Request Information</div>
   <div class="card-body">
     <div class="row">
       <div class="form-group col-md-6">
@@ -36,8 +36,8 @@
   </div>
 </div>
 
-<div class="card">
-  <div class="card-header">
+<div class="card border-info mb-1">
+  <div class="card-header bg-info text-white">
     Requester Information
   </div>
   <div class="card-body">
@@ -114,8 +114,8 @@
   </div>
 </div>
 
-<div class="card">
-  <div class="card-header">
+<div class="card border-info mb-1">
+  <div class="card-header bg-info text-white">
     Systems Requested
   </div>
   @if (Model.RequestTypeId == 4)
@@ -155,6 +155,167 @@
         </table>
       </div>
     </div>
+  }
+  @if (Model.RequestTypeId == 2){
+  <div class="card-body">
+    <div class="row">
+      <div class="form-group col-md-6">
+        <div class="card border-info">
+          <h5 class="card-header text-center bg-info text-white">Current Bureau & Systems</h5>
+          <div class="card-body">
+            <div class="row">
+              <div class="col-md-12">
+                <label>Bureau</label>
+                <span class="form-control">@Model.TransferredFromUnit.Bureau.Description</span>
+              </div>
+            </div>
+            <div class="row mb-3">
+              <div class="col-md-12">
+                <label>Unit / Job Function</label>
+                <span class="form-control">@Model.TransferredFromUnit.Name</span>
+              </div>
+            </div>
+            <table class="table">
+              <thead>
+                <tr>
+                  <th scope="col">Id</th>
+                  <th scope="col">Name</th>
+                </tr>
+              </thead>
+              <tbody>
+                @foreach (var requestedSystem in Model.Systems)
+                {
+                  @if (requestedSystem.AccessType == SystemAccessType.Remove || requestedSystem.AccessType == SystemAccessType.Update)
+                  {
+                    <tr>
+                      <td>@requestedSystem.System.SystemId</td>
+                      <td>@requestedSystem.System.Name</td>
+                    </tr>
+                  }
+                }
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+      <div class="form-group col-md-6">
+        <div class="card border-info">
+          <h5 class="card-header text-center bg-info text-white">New Bureau & Systems</h5>
+          <div class="card-body">
+            <div class="row">
+              <div class="col-md-12">
+                <label>Bureau</label>
+                <span class="form-control">@Model.RequestedFor.Bureau.Description</span>
+              </div>
+            </div>
+            <div class="row mb-3">
+              <div class="col-md-12">
+                <label>Unit / Job Function</label>
+                <span class="form-control">@Model.RequestedFor.Unit.Name</span>
+              </div>
+            </div>
+            <table class="table">
+              <thead>
+                <tr>
+                  <th scope="col">Id</th>
+                  <th scope="col">Name</th>
+                </tr>
+              </thead>
+              <tbody>
+                @foreach (var requestedSystem in Model.Systems)
+                {
+                  @if (requestedSystem.AccessType == SystemAccessType.Add || requestedSystem.AccessType == SystemAccessType.Update)
+                  {
+                    <tr>
+                      <td>@requestedSystem.System.SystemId</td>
+                      <td>@requestedSystem.System.Name</td>
+                    </tr>
+                  }
+                }
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-4">
+        <div class="card border-success">
+          <h5 class="card-header text-center bg-success text-white">Added Systems</h5>
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">Id</th>
+                <th scope="col">Name</th>
+              </tr>
+            </thead>
+            <tbody>
+              @foreach (var requestedSystem in Model.Systems)
+              {
+                @if (requestedSystem.AccessType == SystemAccessType.Add)
+                {
+                  <tr>
+                    <td>@requestedSystem.System.SystemId</td>
+                    <td>@requestedSystem.System.Name</td>
+                  </tr>
+                }
+              }
+            </tbody>
+          </table>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card border-danger">
+          <h5 class="card-header text-center bg-danger text-white">Removed Systems</h5>
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">Id</th>
+                <th scope="col">Name</th>
+              </tr>
+            </thead>
+            <tbody>
+              @foreach (var requestedSystem in Model.Systems)
+              {
+                @if (requestedSystem.AccessType == SystemAccessType.Remove)
+                {
+                  <tr>
+                    <td>@requestedSystem.System.SystemId</td>
+                    <td>@requestedSystem.System.Name</td>
+                  </tr>
+                }
+              }
+            </tbody>
+          </table>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card border-primary">
+          <h5 class="card-header text-center bg-primary text-white">Kept Systems</h5>
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">Id</th>
+                <th scope="col">Name</th>
+              </tr>
+            </thead>
+            <tbody>
+              @foreach (var requestedSystem in Model.Systems)
+              {
+                @if (requestedSystem.AccessType == SystemAccessType.Update)
+                {
+                  <tr>
+                    <td>@requestedSystem.System.SystemId</td>
+                    <td>@requestedSystem.System.Name</td>
+                  </tr>
+                }
+              }
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
   }
   @if (Model.RequestTypeId == 11)
   {
@@ -229,8 +390,8 @@
   }
 </div>
 
-<div class="card">
-  <div class="card-header">
+<div class="card border-info mb-1">
+  <div class="card-header bg-info text-white">
     Additional Information
   </div>
   <div class="card-body">
@@ -286,8 +447,8 @@
   </div>
 </div>
 
-<div class="card">
-  <div class="card-header">
+<div class="card border-info mb-1">
+  <div class="card-header bg-info text-white">
     Signature(s) Required
   </div>
   <div class="card-body">
