--- a/PAM/Views/Shared/_Summary.cshtml
+++ b/PAM/Views/Shared/_Summary.cshtml
@@ -16,8 +16,8 @@
   </div>
 </div>
 
-<div class="card border-primary mb-1">
-  <div class="card-header">Request Information</div>
+<div class="card border-info mb-1">
+  <div class="card-header bg-info text-white">Request Information</div>
   <div class="card-body">
     <div class="row">
       <div class="form-group col-md-6">
@@ -41,8 +41,8 @@
   </div>
 </div>
 
-<div class="card border-primary mb-1">
-  <div class="card-header">
+<div class="card border-info mb-1">
+  <div class="card-header bg-info text-white">
     Requester Information
     <a class="float-right" asp-action="RequesterInfo" asp-route-id="@ViewData["id"]"><i class="fas fa-edit"></i></a>
   </div>
