working view/edit/submit transfer request

--- a/PAM/Views/EditAddAccess/AddSystems.cshtml
+++ b/PAM/Views/EditAddAccess/AddSystems.cshtml
@@ -73,8 +73,8 @@
     <div class="col-md-3">
       <div class="row mb-2">
         <div class="col-md-12">
-          <div class="card">
-            <h4 class="card-header">Selected Systems</h4>
+          <div class="card border-info">
+            <h4 class="card-header bg-info text-white">Selected Systems</h4>
             <table class="table">
               <thead>
                 <tr>
@@ -89,8 +89,8 @@
       </div>
       <div class="row">
         <div class="col-md-12">
-          <div class="card">
-            <h4 class="card-header">Default Systems</h4>
+          <div class="card border-info">
+            <h4 class="card-header bg-info text-white">Default Systems</h4>
             <table class="table">
               <thead>
                 <tr>
