--- a/PAM/Views/Review/ViewReview.cshtml
+++ b/PAM/Views/Review/ViewReview.cshtml
@@ -9,8 +9,8 @@
     <a asp-controller="Review" asp-action="MyReview" class="btn btn-primary float-right">Return</a>
   </div>
 </div>
-<div class="card">
-  <div class="card-header">Request Information</div>
+<div class="card border-info mb-1">
+  <div class="card-header bg-info text-white">Request Information</div>
   <div class="card-body">
     <div class="row">
       <div class="form-group col-md-6">
@@ -34,50 +34,282 @@
   </div>
 </div>
 
-<partial name="../Review/_RequesterInfoReview" />"
-
-<div class="card">
-  <div class="card-header">
-    Systems Requested
-  </div>
-  @if (request.RequestTypeId == 4)
-  {
-    <div class="card-body">
-      <div class="row">
-        <div class="form-group col-md-6">
-          <label>Bureau</label>
-          <span class="form-control">@request.RequestedFor.Bureau.Description</span>
-        </div>
-        <div class="form-group col-md-6">
-          <label>Unit / Job Function</label>
-          <span class="form-control">@request.RequestedFor.Unit.Name</span>
-        </div>
+<div class="card border-info mb-1">
+  <div class="card-header bg-info text-white">Requester Information</div>
+  <div class="card-body">
+    <div class="row">
+      <div class="form-group col-md-6">
+        <label>First Name</label>
+        <span class="form-control">@request.RequestedFor.FirstName</span>
       </div>
-      <div class="row">
-        <table class="table">
-          <thead>
-            <tr>
-              <th scope="col">Id</th>
-              <th scope="col">Name</th>
-              <th scope="col" class="d-none d-md-table-cell">Description</th>
-              <th scope="col" class="nowrap">In Portfolio</th>
-            </tr>
-          </thead>
-          <tbody>
-            @foreach (var requestedSystem in request.Systems)
-            {
-              <tr>
-                <td>@requestedSystem.System.SystemId</td>
-                <td>@requestedSystem.System.Name</td>
-                <td class="d-none d-md-table-cell">@requestedSystem.System.Description</td>
-                <td>@requestedSystem.InPortfolio</td>
-              </tr>
-            }
-          </tbody>
-        </table>
+      <div class="form-group col-md-6">
+        <label>Last Name</label>
+        <span class="form-control">@request.RequestedFor.LastName</span>
       </div>
     </div>
+    <div class="row">
+      <div class="form-group col-md-6">
+        <label>Department</label>
+        <span class="form-control">@request.RequestedFor.Department</span>
+      </div>
+      <div class="form-group col-md-6">
+        <label>Service</label>
+        <span class="form-control">@request.RequestedFor.Service</span>
+      </div>
+    </div>
+    <div class="row">
+      <div class="form-group col-md-6">
+        <label>Title</label>
+        <span class="form-control">@request.RequestedFor.Title</span>
+      </div>
+      <div class="form-group col-md-6">
+        <label>Email</label>
+        <span class="form-control">@request.RequestedFor.Email</span>
+      </div>
+    </div>
+    <div class="row">
+      <div class="form-group col-md-6">
+        <label>Department</label>
+        <span class="form-control">@request.RequestedFor.Department</span>
+      </div>
+      <div class="form-group col-md-6">
+        <label>Service</label>
+        <span class="form-control">@request.RequestedFor.Service</span>
+      </div>
+    </div>
+    <div class="row">
+      <div class="form-group col-sm-6">
+        <label>Address</label>
+        <span class="form-control">@request.RequestedFor.Address</span>
+      </div>
+      <div class="form-group col-md-6">
+        <label>City</label>
+        <span class="form-control">@request.RequestedFor.City</span>
+      </div>
+    </div>
+    <div class="row">
+      <div class="form-group col-md-6">
+        <label>State</label>
+        <span class="form-control">@request.RequestedFor.State</span>
+      </div>
+      <div class="form-group col-md-6">
+        <label>Zip Code</label>
+        <span class="form-control">@request.RequestedFor.Zip</span>
+      </div>
+    </div>
+    <div class="row">
+      <div class="form-group col-md-6">
+        <label>Phone</label>
+        <span class="form-control">@request.RequestedFor.Phone</span>
+      </div>
+      <div class="form-group col-md-6">
+        <label>Cell Phone</label>
+        <span class="form-control">@request.RequestedFor.CellPhone</span>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="card border-info mb-1">
+  <div class="card-header bg-info text-white">Systems Requested</div>
+  @if (request.RequestTypeId == 2){
+  <div class="card-body">
+    <div class="row">
+      <div class="form-group col-md-6">
+        <div class="card border-info">
+          <h5 class="card-header text-center bg-info text-white">Current Bureau & Systems</h5>
+          <div class="card-body">
+            <div class="row">
+              <div class="col-md-12">
+                <label>Bureau</label>
+                <span class="form-control">@request.TransferredFromUnit.Bureau.Description</span>
+              </div>
+            </div>
+            <div class="row mb-3">
+              <div class="col-md-12">
+                <label>Unit / Job Function</label>
+                <span class="form-control">@request.TransferredFromUnit.Name</span>
+              </div>
+            </div>
+            <table class="table">
+              <thead>
+                <tr>
+                  <th scope="col">Id</th>
+                  <th scope="col">Name</th>
+                </tr>
+              </thead>
+              <tbody>
+                @foreach (var requestedSystem in request.Systems)
+                {
+                  @if (requestedSystem.AccessType == SystemAccessType.Remove || requestedSystem.AccessType == SystemAccessType.Update)
+                  {
+                    <tr>
+                      <td>@requestedSystem.System.SystemId</td>
+                      <td>@requestedSystem.System.Name</td>
+                    </tr>
+                  }
+                }
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+      <div class="form-group col-md-6">
+        <div class="card border-info">
+          <h5 class="card-header text-center bg-info text-white">New Bureau & Systems</h5>
+          <div class="card-body">
+            <div class="row">
+              <div class="col-md-12">
+                <label>Bureau</label>
+                <span class="form-control">@request.RequestedFor.Bureau.Description</span>
+              </div>
+            </div>
+            <div class="row mb-3">
+              <div class="col-md-12">
+                <label>Unit / Job Function</label>
+                <span class="form-control">@request.RequestedFor.Unit.Name</span>
+              </div>
+            </div>
+            <table class="table">
+              <thead>
+                <tr>
+                  <th scope="col">Id</th>
+                  <th scope="col">Name</th>
+                </tr>
+              </thead>
+              <tbody>
+                @foreach (var requestedSystem in request.Systems)
+                {
+                  @if (requestedSystem.AccessType == SystemAccessType.Add || requestedSystem.AccessType == SystemAccessType.Update)
+                  {
+                    <tr>
+                      <td>@requestedSystem.System.SystemId</td>
+                      <td>@requestedSystem.System.Name</td>
+                    </tr>
+                  }
+                }
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-4">
+        <div class="card border-success">
+          <h5 class="card-header text-center bg-success text-white">Added Systems</h5>
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">Id</th>
+                <th scope="col">Name</th>
+              </tr>
+            </thead>
+            <tbody>
+              @foreach (var requestedSystem in request.Systems)
+              {
+                @if (requestedSystem.AccessType == SystemAccessType.Add)
+                {
+                  <tr>
+                    <td>@requestedSystem.System.SystemId</td>
+                    <td>@requestedSystem.System.Name</td>
+                  </tr>
+                }
+              }
+            </tbody>
+          </table>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card border-danger">
+          <h5 class="card-header text-center bg-danger text-white">Removed Systems</h5>
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">Id</th>
+                <th scope="col">Name</th>
+              </tr>
+            </thead>
+            <tbody>
+              @foreach (var requestedSystem in request.Systems)
+              {
+                @if (requestedSystem.AccessType == SystemAccessType.Remove)
+                {
+                  <tr>
+                    <td>@requestedSystem.System.SystemId</td>
+                    <td>@requestedSystem.System.Name</td>
+                  </tr>
+                }
+              }
+            </tbody>
+          </table>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card border-primary">
+          <h5 class="card-header text-center bg-primary text-white">Kept Systems</h5>
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">Id</th>
+                <th scope="col">Name</th>
+              </tr>
+            </thead>
+            <tbody>
+              @foreach (var requestedSystem in request.Systems)
+              {
+                @if (requestedSystem.AccessType == SystemAccessType.Update)
+                {
+                  <tr>
+                    <td>@requestedSystem.System.SystemId</td>
+                    <td>@requestedSystem.System.Name</td>
+                  </tr>
+                }
+              }
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
   }
+  @if (request.RequestTypeId == 4){ 
+  <div class="card-body">
+    <div class="row">
+      <div class="form-group col-md-6">
+        <label>Bureau</label>
+        <span class="form-control">@request.RequestedFor.Bureau.Description</span>
+      </div>
+      <div class="form-group col-md-6">
+        <label>Unit / Job Function</label>
+        <span class="form-control">@request.RequestedFor.Unit.Name</span>
+      </div>
+    </div>
+    <div class="row">
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">Id</th>
+            <th scope="col">Name</th>
+            <th scope="col" class="d-none d-md-table-cell">Description</th>
+            <th scope="col" class="nowrap">In Portfolio</th>
+          </tr>
+        </thead>
+        <tbody>
+          @foreach (var requestedSystem in request.Systems)
+          {
+            <tr>
+              <td>@requestedSystem.System.SystemId</td>
+              <td>@requestedSystem.System.Name</td>
+              <td class="d-none d-md-table-cell">@requestedSystem.System.Description</td>
+              <td>@requestedSystem.InPortfolio</td>
+            </tr>
+          }
+        </tbody>
+      </table>
+    </div>
+    </div>
+    }
   @if (request.RequestTypeId == 11)
   {
     <div class="card-body">
@@ -92,69 +324,40 @@
         </div>
       </div>
     </div>
-    <div class="row">
-      <div class="col-md-6">
-        <div class="card">
-          <h5 class="card-header text-center">Default Systems</h5>
-          <table class="table">
-            <thead>
-              <tr>
-                <th scope="col">Id</th>
-                <th scope="col">Name</th>
-                <th scope="col">In Portfolio</th>
-              </tr>
-            </thead>
-            <tbody>
-              @foreach (var requestedSystem in request.Systems)
+  <div class="row p-2">
+    <div class="col-md-12 ">
+      <div class="card">
+        <h5 class="card-header text-center">Requested Additional Systems</h5>
+        <table class="table">
+          <thead>
+            <tr>
+              <th scope="col">Id</th>
+              <th scope="col">Name</th>
+              <th scope="col">Description</th>
+            </tr>
+          </thead>
+          <tbody>
+            @foreach (var requestedSystem in request.Systems)
+            {
+              if (!requestedSystem.InPortfolio)
               {
-                @if (requestedSystem.InPortfolio)
-                {
-                  <tr>
-                    <td>@requestedSystem.System.SystemId</td>
-                    <td>@requestedSystem.System.Name</td>
-                    <td>@requestedSystem.InPortfolio</td>
-                  </tr>
-                }
+                <tr>
+                  <td>@requestedSystem.System.SystemId</td>
+                  <td>@requestedSystem.System.Name</td>
+                  <td>@requestedSystem.System.Description</td>
+                </tr>
               }
-            </tbody>
-          </table>
-        </div>
-      </div>
-      <div class="col-md-6">
-        <div class="card">
-          <h5 class="card-header text-center">Additional Systems</h5>
-          <table class="table">
-            <thead>
-              <tr>
-                <th scope="col">Id</th>
-                <th scope="col">Name</th>
-                <th scope="col">In Portfolio</th>
-              </tr>
-            </thead>
-            <tbody>
-              @foreach (var requestedSystem in request.Systems)
-              {
-                @if (!requestedSystem.InPortfolio)
-                {
-                  <tr>
-                    <td>@requestedSystem.System.SystemId</td>
-                    <td>@requestedSystem.System.Name</td>
-                    <td>@requestedSystem.InPortfolio</td>
-                  </tr>
-                }
-              }
-            </tbody>
-          </table>
-        </div>
+            }
+          </tbody>
+        </table>
       </div>
     </div>
+  </div>
   }
 </div>
 
-<div class="card">
-  <div class="card-header">
-    Additional Information
-  </div>
+<div class="card border-info mb-1">
+  <div class="card-header bg-info text-white">Additional Information</div>
   <div class="card-body">
     <div class="row mb-2">
       <div class="col-md-4">
