still trying to fix add access

--- a/PAM/Views/EditAddAccess/AddSystems.cshtml
+++ b/PAM/Views/EditAddAccess/AddSystems.cshtml
@@ -14,8 +14,6 @@
   <script src="~/lib/core-js/core.min.js"></script>
   <script src="~/lib/bootstrap-table/bootstrap-table.min.js"></script>
   
-<script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.11/lodash.min.js"></script>
-<script src="https://unpkg.com/bootstrap-table@1.13.5/dist/bootstrap-table.min.js"></script>
   <script>
   $(function(){
     var defaultSystems = @Model.RequestedFor.UnitId;
@@ -35,9 +33,13 @@
                 + system.name + "</td></tr>")
               }
               $("input[type=checkbox").click(function () {
-                $("#selectedSystems").append("<tr><td>"
-                  + "Test" + "</td><td>"
-                  + system.name + "</td></tr>");
+                var checkVal = $('.custom-control-input:checked').val();
+                if (system.SystemId == checkVal) {
+                  alert(checkVal)
+                  $("#selectedSystems").append("<tr><td>"
+                    + system.systemId + "</td><td>"
+                    + system.name + "</td></tr>");
+                }
               });;
             });
           }
@@ -47,16 +49,6 @@
       form.append("<input type='hidden' name='saveDraft' value='true'>");
       form.submit();
     });
-    var $table = $('#table')
-     var selections = []
-    $table.on('check.bs.table check-all.bs.table ' +
-      'uncheck.bs.table uncheck-all.bs.table', function (e, rows) {
-        var ids = $.map(!$.isArray(rows) ? [rows] : rows, function (row) {
-          return row.id
-        })
-        var func = $.inArray(e.type, ['check', 'check-all']) > -1 ? 'union' : 'difference'
-        selections = window._[func](selections, ids)
-      });
   });
   </script>
 }
@@ -115,7 +107,7 @@
              data-search-align="right">
         <thead>
           <tr>
-            <th data-checkbox="true"></th>
+            <th></th>
             <th data-sortable="true" scope="col">Id</th>
             <th data-sortable="true" scope="col">Name</th>
             <th scope="col">Description</th>
