--- a/PAM/Views/Review/EditReview.cshtml
+++ b/PAM/Views/Review/EditReview.cshtml
@@ -327,9 +327,9 @@
       </div>
     </div>
   <div class="row p-2">
-    <div class="col-md-12 ">
-      <div class="card">
-        <h5 class="card-header text-center">Requested Additional Systems</h5>
+    <div class="col-md-12">
+      <div class="card border-primary">
+        <h5 class="card-header bg-primary text-white text-center">Requested Additional Systems</h5>
         <table class="table">
           <thead>
             <tr>
