--- a/PAM/Views/Review/ViewReview.cshtml
+++ b/PAM/Views/Review/ViewReview.cshtml
@@ -6,7 +6,7 @@
 
 <div class="row mb-3">
   <div class="col-12">
-    <a asp-controller="Review" asp-action="MyReview" class="btn btn-primary float-right">Return</a>
+    <a asp-controller="Review" asp-action="MyReviews" class="btn btn-primary float-right">Return</a>
   </div>
 </div>
 <div class="card border-info mb-1">
@@ -326,8 +326,8 @@
     </div>
   <div class="row p-2">
     <div class="col-md-12 ">
-      <div class="card">
-        <h5 class="card-header text-center">Requested Additional Systems</h5>
+      <div class="card border-primary">
+        <h5 class="card-header bg-primary text-white text-center">Requested Additional Systems</h5>
         <table class="table">
           <thead>
             <tr>
