--- a/PAM/Views/AddAccessRequest/Summary.cshtml
+++ b/PAM/Views/AddAccessRequest/Summary.cshtml
@@ -15,7 +15,26 @@
   </script>
 }
 
-<partial name="../Shared/_Summary.cshtml" />
+<nav aria-label="breadcrumb">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><a asp-controller="Request" asp-action="MyRequests">My Requests</a></li>
+    <li class="breadcrumb-item active" aria-current="page">Request #@ViewData["id"]</li>
+  </ol>
+</nav>
+
+<partial name="/Views/Shared/ProgressBars/AddAccess.cshtml" />
+
+<div class="row mb-3">
+  <div class="col-6">
+    <a asp-controller="Request" asp-action="MyRequests" class="btn btn-secondary">Back to Drafts</a>
+  </div>
+  <div class="col-6 text-right">
+    <a asp-controller="Request" asp-action="SubmitRequest" asp-route-id="@ViewData["id"]" class="btn btn-primary">Submit Request</a>
+  </div>
+</div>
+
+<partial name="/Views/Shared/Partials/_RequestInfoSummary.cshtml" />
+<partial name="/Views/Shared/Partials/_RequesterInfoSummary.cshtml" />
 
 <div class="card border-info mb-1">
   <div class="card-header bg-info text-white">
