--- a/PAM/Views/AddAccessRequest/UnitSelection.cshtml
+++ b/PAM/Views/AddAccessRequest/UnitSelection.cshtml
@@ -74,7 +74,7 @@
   </ol>
 </nav>
 
-<partial name="../Shared/_ProgressBar1.cshtml" />
+<partial name="/Views/Shared/ProgressBars/AddAccess.cshtml" />
 
 <form asp-action="UnitSelection" method="post">
   <div class="row">
@@ -88,7 +88,7 @@
       <button id="saveDraft" class="btn btn-secondary" disabled>Save Draft</button>
     </div>
     <div class="col-8 text-right">
-      <a asp-controller="Request" asp-action="RequesterInfo" asp-route-id="@Model.RequestId" class="btn btn-secondary">Previous</a>
+      <a asp-controller="AddAccessRequest" asp-action="RequesterInfo" asp-route-id="@Model.RequestId" class="btn btn-secondary">Previous</a>
       <button id="next" type="submit" class="btn btn-primary ml-3" disabled>Next</button>
     </div>
   </div>
