Included review model in routing. Fixed return button route in viewReview. Completed functionality for EditReview

--- a/PAM/Views/Shared/Partials/_ViewReview.cshtml
+++ b/PAM/Views/Shared/Partials/_ViewReview.cshtml
@@ -6,7 +6,7 @@
 
 <div class="row mb-3">
   <div class="col-12">
-    <a asp-controller="Review" asp-action="MyReview" class="btn btn-primary float-right">Return</a>
+    <a asp-controller="Review" asp-action="MyReviews" class="btn btn-primary float-right">Return</a>
   </div>
 </div>
 <div class="card">
