--- a/PAM/Views/Shared/Partials/_EditReview.cshtml
+++ b/PAM/Views/Shared/Partials/_EditReview.cshtml
@@ -320,7 +320,7 @@
   </div>
 </div>*@
 
-<form id="decision" method="post">
+@*<form id="decision" method="post">
   <div class="card mt-5">
     <div class="card-header">Your Decision</div>
     <div class="card-body">
@@ -357,4 +357,4 @@
       });
     });
   </script>
-}
+}*@
