Process and confirm system accesses

--- a/PAM/Views/Shared/_Layout.cshtml
+++ b/PAM/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
           <div class="dropdown-menu" aria-labeledby="requestsMenu">
             <a class="dropdown-item" asp-controller="Request" asp-action="MyRequests">My Requests</a>
             <a class="dropdown-item" asp-controller="Review" asp-action="MyReviews">Review Requests</a>
-            <a class="dropdown-item" asp-controller="Request" asp-action="ProcessRequests">Process Requests</a>
+            <a class="dropdown-item" asp-controller="Processing" asp-action="MyProcessings">Process Requests</a>
             <a class="dropdown-item" asp-controller="Request" asp-action="AllRequests">All Requests</a>
             <a class="dropdown-item" asp-controller="Request" asp-action="CreateRequest">New Request</a>
           </div>
